versioned_docs/version-2.3.x/8_limitation.mdx
---
sidebar_position: 8
---

# Limitation 🐧

This section discusses limitions of FirelordJS due to reason unsupported or straight up impossible.

## Data Type

1. Record<string, T>
2. Record<number, T> or Record<\`${number}\`, T>
3. tuple.
4. union object type with object type.
5. union object type with any primitive type, eg" `{x:{a:number}|'string'}`.
6. Interface

1, 2: technically possible (implemented in FireSageJS) but they are not good practices recommend in Firestore.

Ideally key should not be arbitarly, using arbitary key as field indicate that we are trying to store potentially large data in a document, and due to size limitation(max 1 MB), it is better to save each entry as document instead.

3: technically possible but why would we want to store a tuple? The only use case that is make sense is to store union of tuple: [1,2,3] | [4,5,6], but still doesn't offer huge advantage over array.

4: technically possible (implemented in FireSageJS for internal use). By utilizing Typesript distributive properties it is possible to generate path for object literal unions field.

Objects unions type seem to be a good type to have in NoSQL database. However, this is not the case because it brings uncertainty that cannot be handled reasonably. For example, with `{a:number}|{b:string}`, you can set `{a:1}` then update `{b:"x"}`, in this case the type is no longer a unions type but an intersection type: `{a:number} & {b:string}`. So I will not implement this feature and will remove it from [FireSageJS](https://github.com/tylim88/FireSageJS) too. A better way to solve this is to use [`PossiblyReadAsUndefined`](https://firelordjs.com/guides/possibly_read_as_undefined) label instead.

5: technically possible

:::note
Multiple types per object also degrade developer experience, because you always need to do [runtime type check](https://www.typescriptlang.org/docs/handbook/2/everyday-types.html#working-with-union-types) everytime you read it since you don't what is the exact type it returns.

This is simple with primitive types but unpleasant with object type.
:::

6: Interface serve as utility type, to avoid conflict, we must declare all data types with Type.

:::info
4 will not be supported, will give 1, 2, 3 and 5 deeper thoughts in the future.
:::

## Empty Value Handling

1. limit and limitToLast cannot prevent runtime value 0, resulting in runtime error.
2. cursor rest argument must be tuple type to work.

It is possible to solve 1 but the solution is too fragile, so not going to work on it.

No possible way to improve 2 at current stage because position must be known.
